fix: improve text wrapping alignment in canvas list items The display: contents property makes the link element "disappear" from the layout tree while preserving its content and functionality.
  Before the fix:
  <li> [flexbox container]
    ::before [bullet]
    <a> [inline element] "iroh"
    text node "for hole punching and P2P networking"

  The <a> tag creates an inline formatting context. When text wraps, the browser treats the link as a discrete inline element, causing wrapped text to
  align relative to the link's positioning within the flex container rather than flowing naturally with the text.

  After the fix:
  <li> [flexbox container]
    ::before [bullet]
    text content "iroh for hole punching and P2P networking"

  With display: contents, the <a> element is removed from the layout calculation. Its content ("iroh") becomes direct content of the <li>, creating uniform
   text flow. The link remains clickable and styled, but no longer disrupts text wrapping behavior.

  This eliminates the inline element boundary that was causing inconsistent text continuation alignment between lines starting with links versus plain
  text.

--- a/www/canvas/index.html
+++ b/www/canvas/index.html
@@ -163,6 +163,10 @@ block meta %}
     flex-shrink: 0;
   }
 
+  .canvas-grid li a {
+    display: contents;
+  }
+
   /* Position only ul elements since h2 are hidden */
   .canvas-grid ul:nth-of-type(1) {
     grid-column: 1;
