feat: update footer with http-nu, Datastar links and cross.stream branding

--- a/www/index.html
+++ b/www/index.html
@@ -206,9 +206,11 @@ additional_css %}
 <footer class="footer">
   <div class="footer-links">
     <a href="https://github.com/cablehead/xs">GitHub</a>
-    <a href="https://cablehead.github.io/xs/">Docs</a>
     <a href="https://discord.com/invite/YNbScHBHrh">Discord</a>
+    <a href="https://cablehead.github.io/xs/" class="brand-link">cross.<span>stream</span></a>
     <a href="https://www.nushell.sh/">Nushell</a>
+    <a href="https://github.com/cablehead/http-nu">http-nu</a>
+    <a href="https://data-star.dev">Datastar</a>
   </div>
 </footer>
 
