--- a/www/index.html
+++ b/www/index.html
@@ -169,8 +169,8 @@ additional_css %}
       description="Continuously pull data from files, APIs, websockets, serial devices, or sensors."
     ></feature-card>
     <feature-card
-      type="handlers"
-      card-title="Handlers"
+      type="actors"
+      card-title="Actors"
       description="React to incoming frames with stateful processors—transform, trigger, fan-out."
     ></feature-card>
     <feature-card
@@ -186,7 +186,7 @@ additional_css %}
     <feature-card
       type="nushell"
       card-title="Nushell Integration"
-      description="Write handlers and generators in Nushell with strong typing and structured pipelines."
+      description="Write actors and generators in Nushell with strong typing and structured pipelines."
     ></feature-card>
   </div>
 
