refactor: rename generators to services in website copy

--- a/www/index.html
+++ b/www/index.html
@@ -164,8 +164,8 @@ additional_css %}
       description="Append-only stream with content-addressable storage (CAS). Separate metadata from content for speed."
     ></feature-card>
     <feature-card
-      type="generators"
-      card-title="Generators"
+      type="services"
+      card-title="Services"
       description="Continuously pull data from files, APIs, websockets, serial devices, or sensors."
     ></feature-card>
     <feature-card
@@ -186,7 +186,7 @@ additional_css %}
     <feature-card
       type="nushell"
       card-title="Nushell Integration"
-      description="Write actors and generators in Nushell with strong typing and structured pipelines."
+      description="Write actors and services in Nushell with strong typing and structured pipelines."
     ></feature-card>
   </div>
 
