refactor: rename commands to actions in website copy

--- a/www/index.html
+++ b/www/index.html
@@ -174,8 +174,8 @@ additional_css %}
       description="React to incoming frames with stateful processors—transform, trigger, fan-out."
     ></feature-card>
     <feature-card
-      type="commands"
-      card-title="Commands"
+      type="actions"
+      card-title="Actions"
       description="On-demand, stateless ops. Perfect for RPC-style calls or streaming data back to the caller."
     ></feature-card>
     <feature-card
