refactor: use http-nu builtins instead of minijinja-cli and m2h

--- a/www/canvas/index.html
+++ b/www/canvas/index.html
@@ -1,4 +1,4 @@
-{% extends "../base.html" %} {% set components_path_value = "../" %} {% block
+{% extends "base.html" %} {% set components_path_value = "../" %} {% block
 title %}<title>Business Model Canvas - cross.stream</title>{% endblock %} {%
 block meta %}
 <meta
