--- a/www/index.html
+++ b/www/index.html
@@ -207,7 +207,8 @@ additional_css %}
   <div class="footer-links">
     <a href="https://github.com/cablehead/xs">GitHub</a>
     <a href="https://discord.com/invite/YNbScHBHrh">Discord</a>
-    <a href="https://cablehead.github.io/xs/" class="brand-link">cross.<span>stream</span></a>
+    <a href="https://cablehead.github.io/xs/" class="brand-link">cross.<span
+      >stream</span></a>
     <a href="https://www.nushell.sh/">Nushell</a>
     <a href="https://github.com/cablehead/http-nu">http-nu</a>
     <a href="https://data-star.dev">Datastar</a>
