--- a/www/index.html
+++ b/www/index.html
@@ -149,7 +149,7 @@ additional_css %}
         href="https://github.com/cablehead/xs/tree/main/examples/discord-bot"
       >example</a>, you might append a frame every time a message is posted in a
       specific Discord channel. You can then <a
-        href="https://cablehead.github.io/xs/getting-started/first-stream/#cat-and-cas-commands"
+        href="https://cablehead.github.io/xs/getting-started/first-stream/#cat-command"
       ><code>.cat</code></a> the stream to review all captured messages, and -if
       you're in a <a href="https://www.nushell.sh/">Nushell</a> session -use
       pipelines to filter, aggregate, or process them with a CLI tool.
@@ -164,8 +164,8 @@ additional_css %}
     >
       <h3>Event Store</h3>
       <p>
-        Append-only stream with content-addressable storage (CAS). Separate
-        metadata from content for speed.
+        Append-only stream with structured metadata inline on each frame.
+        Content-addressable storage (CAS) for binary and large blobs.
       </p>
     </a>
     <a
@@ -295,26 +295,24 @@ additional_css %}
 
     if (type === "notes") {
       output = `<div class="terminal-line">
-          <span class="comment"># Filter events to show only notes entries with their content</span>
+          <span class="comment"># Filter events to show only notes entries</span>
         </div>
         <div class="terminal-line">
           <span class="prompt">$</span>
-          <span class="command">.cat | where topic == "notes" | insert content { .cas $in.hash }</span>
+          <span class="command">.cat | where topic == "notes" | each { $in.meta.text }</span>
         </div>
-        <pre class="terminal-output" data-variant="table">┌───┬───────┬─────────────────────────────────────────┐
-│ # │ topic │                content                  │
-├───┼───────┼─────────────────────────────────────────┤
-│ 0 │ notes │ quick note about meeting                │
-│ 1 │ notes │ submit TPS report                       │
-│ 2 │ notes │ review project docs                     │
-└───┴───────┴─────────────────────────────────────────┘</pre>`;
+        <pre class="terminal-output" data-variant="table">┌───┬──────────────────────────┐
+│ 0 │ quick note about meeting │
+│ 1 │ submit TPS report        │
+│ 2 │ review project docs      │
+└───┴──────────────────────────┘</pre>`;
     } else if (type === "goal") {
       output = `<div class="terminal-line">
-          <span class="comment"># Get the most recent goal and display its content</span>
+          <span class="comment"># Get the most recent goal</span>
         </div>
         <div class="terminal-line">
           <span class="prompt">$</span>
-          <span class="command">.last goal | .cas</span>
+          <span class="command">.last goal | $in.meta.text</span>
         </div>
         <pre class="terminal-output">learn cross.stream</pre>`;
     }
